--- a/PPIL_v1.1/.project
+++ b/PPIL_v1.1/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PPIL_v1.1</name>
+	<name>PPIL_Server</name>
 	<comment></comment>
 	<projects>
 	</projects>
